syntax = "proto3";

option go_package = "pb/api";

import "api/test_delivery.proto";

package pb;

// The service definition
service TestService {
  rpc TestPublic (TestPublicRequest) returns (TestPublicResponse) {}

  rpc TestPrivate (TestPrivateRequest) returns (TestPrivateResponse) {}

}
