syntax = "proto3";

option go_package = "pb/api";

import "api/delivery.proto";

package pb;

// The service definition
service ToDoService {
  rpc CreateProject (CreateProjectRequest) returns (CreateProjectResponse) {}
}
